# tensorrt_yolov4

./: CMakeLists.txt  README.md  TensorRTYoloV4.sln  requirements.txt
CreateInferenceEngine/: CreateInferenceEngine.cpp  calibrator.cpp  calibrator.h  ds_image.cpp
Export/doc/: SDK说明及调用示例.docx
Export/include/: PersonDetectionSdk.h
Export/model/: readme.txt
TensorRTYoloV4/: logging.h  mish.cpp  mish.cu  mish.h  run.cpp  yololayer.cpp  yololayer.cu  yoloparam.h  yolov4.cpp  yolov4.h
TestDemo/: CMakeLists.txt  Hungarian.cpp  KalmanTracker.cpp  KalmanTracker.h  PlateID.cpp  PlateID.h  TH_ErrorDef.h  TH_PlateID.h  TestDemo.vcxproj  sorttracking.cpp  sorttracking.h  test.cpp
TestTrack/: Hungarian.h  KalmanTracker.cpp  KalmanTracker.h  TestTrack.vcxproj  TestYoloV4.cpp  sorttracking.cpp  sorttracking.h
TestYoloV4/: CMakeLists.txt  TestYoloV4.cpp  TestYoloV4.vcxproj  encode.txt
createengine/: CMakeLists.txt  CreateInferenceEngine.cpp  calibrator.cpp  calibrator.h  createengine.vcxproj  ds_image.h
inferencedll/: CMakeLists.txt  inferencedll.vcxproj  logging.h  mish.cpp  mish.cu  run.cpp  utils.h  yololayer.cpp  yololayer.h  yoloparam.h  yolov4.cpp  yolov4.h
model/calibratorimages/: readme.txt
